crates/buff-lang-codegen-rust/tests/snapshots/msgpack_codegen__msgpack_codegen_deserialize_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/msgpack_codegen.rs
assertion_line: 505
expression: src
---
fn f() {
    buff_msgpack::deserialize(&bytes).unwrap_or_default();
}
