crates/buff-lang-codegen-rust/tests/snapshots/msgpack_codegen__msgpack_codegen_full_program_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/msgpack_codegen.rs
assertion_line: 540
expression: src
---
fn main() {
    let bytes: Vec<u8> = buff_msgpack::serialize(&"payload".to_string())
        .unwrap_or_default();
    let back = buff_msgpack::deserialize(&bytes).unwrap_or_default();
    let ok = buff_msgpack::roundtrip(&"payload".to_string());
    {
        if let Ok(__buff_contents) = std::fs::read_to_string(".env") {
            for __buff_line in __buff_contents.lines() {
                let __buff_line = __buff_line.trim();
                if __buff_line.is_empty() || __buff_line.starts_with('#') {
                    continue;
                }
                if let Some((__buff_key, __buff_val)) = __buff_line.split_once('=') {
                    let __buff_k = __buff_key.trim().to_string();
                    let __buff_v = __buff_val.trim().to_string();
                    if !__buff_k.is_empty() && std::env::var(&__buff_k).is_err() {
                        unsafe {
                            std::env::set_var(&__buff_k, &__buff_v);
                        }
                    }
                }
            }
        }
    }
}
