crates/buff-lang-codegen-rust/tests/snapshots/msgpack_codegen__msgpack_codegen_roundtrip_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/msgpack_codegen.rs
assertion_line: 514
expression: src
---
fn f() {
    buff_msgpack::roundtrip(&value);
}
